[tool.poetry]
name = "investing-scraping"
version = "0.1.0"
description = ""
authors = ["LuizAlexandre21 <Luizalexandre21@outlook.com>"]
readme = "README.md"
packages = [{include = "investing_scraping"}]

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
